// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzPageContent should render EzContentGroup content with horizontal styles 1`] = `
.recipe-2 {
  background: #f4f7f8;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
}

@media screen and (min-width:48em) {
  .recipe-2 {
    padding: 2.2857142857142856rem;
  }
}

.recipe-2 > *:not(:first-child) {
  margin-top: 2.2857142857142856rem;
}

.recipe-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.recipe-0 > * {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.recipe-0 > *:not(:first-child) {
  margin-left: 1.4285714285714286rem;
}

<div
  className="recipe-2 recipe-3"
>
  <div
    className="recipe-0 recipe-1"
  >
    <p>
      Lorem ipsum dolor
    </p>
    <p>
      Lorem ipsum dolor
    </p>
  </div>
</div>
`;

exports[`EzPageContent should render EzContentGroup with default styles 1`] = `
.recipe-2 {
  background: #f4f7f8;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
}

@media screen and (min-width:48em) {
  .recipe-2 {
    padding: 2.2857142857142856rem;
  }
}

.recipe-2 > *:not(:first-child) {
  margin-top: 2.2857142857142856rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

<div
  className="recipe-2 recipe-3"
>
  <div
    className="recipe-0 recipe-1"
  >
    <p>
      Lorem ipsum dolor
    </p>
    <p>
      Lorem ipsum dolor
    </p>
  </div>
</div>
`;

exports[`EzPageContent should render with default styles 1`] = `
.recipe-0 {
  background: #f4f7f8;
  padding: 0.8571428571428571rem 0.5714285714285714rem;
}

@media screen and (min-width:48em) {
  .recipe-0 {
    padding: 2.2857142857142856rem;
  }
}

.recipe-0 > *:not(:first-child) {
  margin-top: 2.2857142857142856rem;
}

<div
  className="recipe-0 recipe-1"
>
  <p>
    Lorem ipsum dolor
  </p>
  <p>
    Lorem ipsum dolor
  </p>
</div>
`;
